# Bootcamp-CV

./: README.md  make_ppt.py  presentation.md  presentation.pptx  questions_week1.md
.cursor/rules/: ponytail-lite.mdc
week 1/: README.md  dataset.py  image_preprocessing.py  presentation.md  presentation.pptx  questions_week1.md  red.py  requirements.txt  save_raw.py
week 1/git/: red.py
week 1/huggingface/: README.md  dataset.py  image_preprocessing.py  save_raw.py
week 2/: PLAN.md  rgbd_pointcloud.js  test_rgbd_pointcloud.cpp
week 2/scripts/: 01_test_js.ps1  06_validate_cpp_outputs.ps1
week2/: .gitignore  CHECKPOINTS.md  CMakeLists.txt  README.md  REPORT.md  test_rgbd_pointcloud.js
week2/docs/: PLAN.md  REPORT.md
week2/outputs/: metrics.json
week2/outputs/cpp/: metrics_cpp.json
week2/scripts/: 00_check_env.ps1  01_test_js.ps1  02_run_demo_js.ps1  03_validate_outputs.ps1  04_build_cpp.ps1  05_run_demo_cpp.ps1  07_make_ppt.py
week2/src/: rgbd_pointcloud.cpp  rgbd_pointcloud.js
week2/submission/: SUBMISSION_WEEK2_RGBD_POINTCLOUD.pptx
week2/tests/: test_rgbd_pointcloud.cpp  test_rgbd_pointcloud.js
week3/: .gitignore  README.md  requirements.txt  week3_epillid_5class_classification.ipynb  week3_yolov8_medical_pills.ipynb  week3_yolov8_pill_detection_report.pptx
week3/outputs/: counting_metrics.json  metrics.json
week3/outputs/classification/: best_classifier.pt  classification_metrics.json  classification_predictions.csv  classification_report.json  classification_split_manifest.csv
